--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
     "@prisma/client": "^5.16.1",
     "@rocketseat/eslint-config": "^2.2.2",
     "@vercel/postgres": "^0.9.0",
     "next": "14.2.4",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
     "ts-node": "^10.9.2",
